--- a/front/community.html
+++ b/front/community.html
@@ -87,53 +87,108 @@
 		      <div class="tabs">
 		        <!-- Tab 1, active by default -->
 		        <div id="tab1" class="page-content tab" style="padding-top:12%">
-		          <div class="content-block">
-		            <!-- ... 关注 content ... -->
-
+		          <!-- ... 关注 content ... -->
+		          <div class="content-block" style="padding-bottom:10%;padding-top:5%"> 
+					<p style="text-indent:4em">啊哦，你还没有关注任何人 ~~  </p>
 		          </div>
+		          <div class="content-block-title font16" style="border-bottom:1px solid #BDBDBD;">推荐关注</div>
+		          <ul>
+		          	<li class="card facebook-card">
+		          	  <!-- 卡片列表1 -->
+		              <!-- <div class="card facebook-card"> -->
+		                <div class="card-header">
+		                  <div class="fb">
+		                    <div class="facebook-avatar">
+		                      <img src="img/2.jpg" width="34" height="34">
+		                    </div>
+		                    <div class="facebook-name" style="font-size:16px">John Doe</div>
+		                    <div class="facebook-date">Monday at 2:15 PM</div>
+		                  </div>
+		                  <a href="#" class="button followBtn" style="color:Tomato;border-color: #FF5722;">关注</a>
+		                </div>
+		                <div class="card-content">
+		                  <div class="card-content-inner">
+		                    <p class="font16">What a nice photo i took yesterday!</p>
+		                    <img src="img/1.jpg" width="280" height="140">
+		                  </div>
+		                </div>
+		              <!-- </div>  -->
+		              <!-- 卡片列表1 end -->
+		          	</li>
+		          	<li class="card facebook-card">
+		          	  <!-- 卡片列表1 -->
+		              <!-- <div class="card facebook-card"> -->
+		                <div class="card-header">
+		                  <div class="fb">
+		                    <div class="facebook-avatar">
+		                      <img src="img/2.jpg" width="34" height="34">
+		                    </div>
+		                    <div class="facebook-name" style="font-size:16px">John Doe</div>
+		                    <div class="facebook-date">Monday at 2:15 PM</div>
+		                  </div>
+		                  <a href="#" class="button followBtn" style="color:Tomato;border-color: #FF5722;">关注</a>
+		                </div>
+		                <div class="card-content">
+		                  <div class="card-content-inner">
+		                    <p class="font16">What a nice photo i took yesterday!</p>
+		                    <img src="img/1.jpg" width="280" height="140">
+		                  </div>
+		                </div>
+		              <!-- </div>  -->
+		              <!-- 卡片列表1 end -->
+		          	</li>
+		          </ul>
 		        </div>
 		        <!-- Tab 2 -->
 		        <div id="tab2" class="page-content tab active" style="padding:15% 0;">
 		            <!-- ... 推荐 content ... -->
-		            <div class="card demo-card-header-pic">
-					  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
-					  <div class="card-content">
-					    <div class="card-content-inner">
-					      <p class="color-gray">Posted on January 21, 2015</p>
-					      <p>Quisque eget vestibulum nulla...</p>
-					    </div>
-					  </div>
-					  <div class="card-footer">
-					    <a href="#" class="link">Like</a>
-					    <a href="#" class="link">Read more</a>
-					  </div>
-					</div><!--1-->
-					<div class="card demo-card-header-pic">
-					  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
-					  <div class="card-content">
-					    <div class="card-content-inner">
-					      <p class="color-gray">Posted on January 21, 2015</p>
-					      <p>Quisque eget vestibulum nulla...</p>
-					    </div>
-					  </div>
-					  <div class="card-footer">
-					    <a href="#" class="link">Like</a>
-					    <a href="#" class="link">Read more</a>
-					  </div>
-					</div><!--2-->
-					<div class="card demo-card-header-pic">
-					  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
-					  <div class="card-content">
-					    <div class="card-content-inner">
-					      <p class="color-gray">Posted on January 21, 2015</p>
-					      <p>Quisque eget vestibulum nulla...</p>
-					    </div>
-					  </div>
-					  <div class="card-footer">
-					    <a href="#" class="link">Like</a>
-					    <a href="#" class="link">Read more</a>
-					  </div>
-					</div><!--2-->
+		            <ul>
+			            <li>
+				            <div class="card demo-card-header-pic">
+							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div class="card-content">
+							    <div class="card-content-inner">
+							      <p class="color-gray">Posted on January 21, 2015</p>
+							      <p>Quisque eget vestibulum nulla...</p>
+							    </div>
+							  </div>
+							  <div class="card-footer">
+							    <a href="#" class="link">Like</a>
+							    <a href="#" class="link">Read more</a>
+							  </div>
+							</div><!--1-->
+						</li>
+						<li>
+							<div class="card demo-card-header-pic">
+							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div class="card-content">
+							    <div class="card-content-inner">
+							      <p class="color-gray">Posted on January 21, 2015</p>
+							      <p>Quisque eget vestibulum nulla...</p>
+							    </div>
+							  </div>
+							  <div class="card-footer">
+							    <a href="#" class="link">Like</a>
+							    <a href="#" class="link">Read more</a>
+							  </div>
+							</div><!--2-->
+						</li>
+						<li>
+							<div class="card demo-card-header-pic">
+							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div class="card-content">
+							    <div class="card-content-inner">
+							      <p class="color-gray">Posted on January 21, 2015</p>
+							      <p>Quisque eget vestibulum nulla...</p>
+							    </div>
+							  </div>
+							  <div class="card-footer">
+							    <a href="#" class="link">Like</a>
+							    <a href="#" class="link">Read more</a>
+							  </div>
+							</div><!--2-->
+						</li>
+					</ul>
 		        </div>
 		        <!-- Tab 3 -->
 		        <div id="tab3" class="page-content tab" style="padding:15% 0">
