--- a/front/find.html
+++ b/front/find.html
@@ -71,37 +71,50 @@
         <div class="pages navbar-through toolbar-through whiteBGColor">
 	        <div class="page-content">
 	        	<div class="list-block">
-				  <ul>
-				    <li >
-				      <a href="musicList.html" class="item-link item-content">
-				        <div class="item-media"><i class="icon fas fa-music fa-lg" style="color:Tomato"></i></div>
-				        <div class="item-inner" style="height:50px;padding-left:3%;">
-				          <div class="item-title font18">音乐</div>
-				          <div class="item-after">全部</div>
-				        </div>
-				      </a>
-				    </li>
-				    <li>
-				      <a href="#" class="item-link item-content">
-				        <div class="item-media"><i class="icon fas fa-book fa-lg" style="color:Tomato"></i></div>
-				        <div class="item-inner" style="height:50px;padding-left:3%;">
-				          <div class="item-title font18">文章</div>
-				          <div class="item-after">全部</div>
-				        </div>
-				      </a>
-				    </li>
-				    <li>
-				      <a href="#" class="item-link item-content">
-				        <div class="item-media"><i class="icon fas fa-camera-retro fa-lg" style="color:Tomato"></i></div>
-				        <div class="item-inner" style="height:50px;padding-left:3%;">
-				          <div class="item-title font18">图片</div>
-				          <div class="item-after">全部</div>
-				        </div>
-				      </a>
-				    </li>
-				  </ul>
-				  <!-- <div class="list-block-label">List block label text goes here</div> -->
-				</div>
+    				  <ul>
+    				    <li >
+    				      <a href="musicList.html" class="item-link item-content">
+    				        <div class="item-media"><i class="icon fas fa-music fa-lg" style="color:Tomato"></i></div>
+    				        <div class="item-inner" style="height:50px;padding-left:3%;">
+    				          <div class="item-title font18">音乐</div>
+    				          <div class="item-after">全部</div>
+    				        </div>
+    				      </a>
+    				    </li>
+    				    <li>
+    				      <a href="#" class="item-link item-content">
+    				        <div class="item-media"><i class="icon fas fa-book fa-lg" style="color:Tomato"></i></div>
+    				        <div class="item-inner" style="height:50px;padding-left:3%;">
+    				          <div class="item-title font18">文章</div>
+    				          <div class="item-after">全部</div>
+    				        </div>
+    				      </a>
+    				    </li>
+    				    <li>
+    				      <a href="#" class="item-link item-content">
+    				        <div class="item-media"><i class="icon fas fa-camera-retro fa-lg" style="color:Tomato"></i></div>
+    				        <div class="item-inner" style="height:50px;padding-left:2%;">
+    				          <div class="item-title font18">图片</div>
+    				          <div class="item-after">全部</div>
+    				        </div>
+    				      </a>
+    				    </li>
+    				  </ul>  
+    				</div>
+            <!-- 列表1 -->
+            <div class="list-block">
+              <ul>
+                <li>
+                  <a href="#" class="item-link item-content">
+                    <div class="item-media"><i class="icon fas fa-star fa-lg" style="color:Tomato"></i></div>
+                    <div class="item-inner" style="height:50px;padding-left:1%;">
+                      <div class="item-title font18">每日推荐</div>
+                      <div class="item-after">全部</div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
 	        </div>
         </div>
         <!-- Bottom Toolbar-->
