--- a/front/signup.html
+++ b/front/signup.html
@@ -17,10 +17,10 @@
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
-            <div class="left"><a href="signin.html"><i class="whiteColor fa fa-arrow-left"></i></a></div>
-            <div class="center whiteColor">注册</div>
+            <div class="left"><a href="signin.html" class="greyColor"><i class=" fa fa-arrow-left"></i></a></div>
+            <div class="center redColor">注册</div>
             <div class="right" style="width: 30px;"></div>
           </div>
         </div>
