--- a/front/verify.html
+++ b/front/verify.html
@@ -16,10 +16,10 @@
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
-            <div class="left"><a href="signup.html"><i class="whiteColor fa fa-arrow-left"></i></a></div>
-            <div class="center whiteColor">验证手机</div>
+            <div class="left"><a href="signup.html"><i class="greyColor fa fa-arrow-left"></i></a></div>
+            <div class="center redColor">验证手机</div>
             <div class="right" style="width: 30px;"></div>
           </div>
         </div>
