--- a/front/zhuce.html
+++ b/front/zhuce.html
@@ -36,11 +36,11 @@
     <div class="views">
       <div class="view view-main">
         <!-- Top Navbar-->
-        <div class="navbar redBGColor">
+        <div class="navbar">
           <div class="navbar-inner">
             <div class="left" style="width: 30px;"></div>
-            <div class="center whiteColor">登录</div>
-            <div class="right"><a href="signup.html" class="link whiteColor">注册</a></div>
+            <div class="center">登 录</div>
+            <div class="right"><a href="signup.html" class="link redColor">注册</a></div>
           </div>
         </div>
         <div class="pages navbar-through toolbar-throug">
