--- a/front/tupian.html
+++ b/front/tupian.html
@@ -24,7 +24,7 @@
         <div class="navbar whiteBGColor">
           <div class="navbar-inner">
             <div class="left">
-                <a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-angle-left "></i></a>
+                <a href="javascript:history.go(-1)" class="external grayColor"><i class="fas fa-arrow-left fa-lg"></i></a>
             </div>
             <div class="center sliding">图片列表</div>
             <div class="right">
@@ -87,29 +87,6 @@
             
         </div>
          <!-- Bottom Toolbar-->
-        <div class="toolbar tabbar tabbar-labels" style="position:fixed;bottom:0;">
-          <div class="toolbar-inner">
-              <a href="#" class="tab-link active">
-                  <i class="icon fas fa-home fa-lg" style="color:Tomato"></i>
-                  <span class="tabbar-label redColor">首页</span>
-              </a>
-              <a href="find.html" class="tab-link">
-                  <i class="icon far fa-compass fa-lg"></i>
-                  <span class="tabbar-label">发现</span>
-              </a>
-              <a href="javascript:;" class="tab-link open-about click_pop">
-                  <i class="icon fas fa-plus-square fa-2x" style="color:Tomato"></i>  
-              </a>
-              <a href="community.html" class="tab-link">
-                  <i class="icon fas fa-bars fa-lg"></i>
-                  <span class="tabbar-label">社区</span>
-              </a>
-              <a href="my.html" class="tab-link">
-                  <i class="icon fas fa-user fa-lg"></i>
-                  <span class="tabbar-label">我的</span>
-              </a>
-          </div>
-        </div><!-- toolbar end -->
         
     </div>
   </body>
