--- a/front/musicPlay.html
+++ b/front/musicPlay.html
@@ -221,7 +221,7 @@
               <div class="item-media"><img src="img/Adele.jpg" width="44" height="44"></div>
               <div class="item-inner">
                 <div class="item-title-row">
-                  <div class="item-title">Set fire into the rain</div>
+                  <div class="item-title">Set Fire to the Rain</div>
                 </div>
                 <div class="item-subtitle">Adele</div>
               </div>
