--- a/back/index.html
+++ b/back/index.html
@@ -30,8 +30,8 @@
             <div class="sidebar-collapse">
                 <ul class="nav" id="side-menu">
                     <li class="nav-header">
-                        <div class="logo-element" style="display: block;"><img src="img/logo.png" width="50px" />
-                        </div>
+                       <!--  <div class="logo-element" style="display: block;"><img src="img/logo.png" width="50px" />
+                        </div> -->
                     </li>
                     <li>
                         <a class="J_menuItem" href="indexIndex.html">
@@ -62,9 +62,11 @@
                         <ul class="nav nav-second-level">
                             <li><a class="J_menuItem" href="articleAdminis.html">文章管理</a>
                             </li>
-                            <li><a class="J_menuItem" href="videoAdminis.html">视频管理</a>
-                            </li>
                             <li><a class="J_menuItem" href="imgAdminis.html">图片管理</a>
+                            </li>
+                            <li><a class="J_menuItem" href="musicguanli.html">音乐管理</a>
+                            </li>
+                             <li><a class="J_menuItem" href="dongtai.html">动态管理</a>
                             </li>
                         </ul>
                     </li>
@@ -80,7 +82,7 @@
                             
                         </ul>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#"><i class="fa fa-book"></i> <span class="nav-label">菜谱管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
@@ -90,9 +92,22 @@
                                 <a class="J_menuItem" href="menuAdd.html">添加菜谱</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
+                    </li> -->
+                   <!--  <li>
                         <a class="J_menuItem" href="recommend.html"><i class="fa fa-thumbs-up"></i> <span class="nav-label">推荐位管理</span></a>
+
+                    </li> -->
+                     <li>
+                        <a href="user.html"><i class="fa fa-thumbs-up"></i> <span class="nav-label">推荐位管理</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a class="J_menuItem" href="recommend.html">推荐位管理</a>
+                            </li>
+                             <li>
+                                <a class="J_menuItem" href="addtuijian.html">添加推荐位</a>
+                            </li>
+                            
+                        </ul>
                     </li>
 
                 </ul>
