--- a/back/article.html
+++ b/back/article.html
@@ -30,13 +30,14 @@
 					老罗说虾话
 				</h1>
 				<div class="col-sm-12 column">
-					<div class="col-sm-6"></div>
-					<div class="col-sm-6">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-10">
 						<div class="col-sm-4">作者：老罗。</div>
 						<div class="col-sm-4">发布日期：2014-09-09</div>
 						<div class="col-sm-4">查看次数：666</div>
 					</div>
 				</div>
+				<div><img src="img/p1.jpg" width="90%" style="margin:20px 0"/></div>
 				<p style="padding-top:3%;">
 					 <em>Git</em> 是一个分布式的版本控制系统，最初由 <strong>Linus Torvalds</strong> 编写，用作Linux内核代码的管理。在推出后，Git在其它项目中也取得了很大成功，尤其是在 <small>Ruby</small> 社区中。
 				</p>
