--- a/back/recommend.html
+++ b/back/recommend.html
@@ -16,49 +16,57 @@
     <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css?v=4.1.0" rel="stylesheet">
-
+<style type="text/css">
+    td,th{
+        text-align: center;
+    }
+</style>
 </head>
 
 <body class="gray-bg">
     <div class="wrapper wrapper-content animated fadeInRight">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
-                        <h5>轮播图推荐位</h5>
+                        <h5>首页轮播图推荐位</h5>
                     </div>
                     <div class="ibox-content">
 
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th class="col-sm-2">ID</th>
-                                    <th class="col-sm-8">标题&摘要</th>
-                                    <th class="col-sm-2">操作</th>
+                                    <th class="col-sm-4" style="text-align:center">ID</th>
+                                    <th class="col-sm-4" style="text-align:center">图片</th>
+                                    <th class="col-sm-4">操作</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>1</td>
-                                    <td><a href="article.html">十分个人我让给他换一套与具有</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
                                     <td>
                                         <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>2</td>
-                                    <td><a href="article.html">二等奖房顶上肯定是考虑萨克斯为</a></td>
-                                    <td>
-                                        <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
+                                    <td style="text-align:center">2</td>
+                                   <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
+                                       <td> <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>3</td>
-                                    <td><a href="article.html">也同样被处罚的痕迹所得到的</a></td>
-                                    <td>
-                                        <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
+                                    <td style="text-align:center">3</td>
+                                  <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
+                                      <td>  <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
                                 </tr>
@@ -67,12 +75,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col-sm-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
-                        <h5>列表推荐位</h5>
+                        <h5>社区推荐位</h5>
                         <div class="ibox-tools">
                             <a href="#">
                                 <i class="text-navy fa fa-repeat"></i>
@@ -84,32 +92,53 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th class="col-sm-2">ID</th>
-                                    <th class="col-sm-8">标题&摘要</th>
+                                 <th class="col-sm-2" style="text-align:center">ID</th>
+                                    <th class="col-sm-2" style="text-align:center">标题</th>
+                                    <th class="col-sm-2" style="text-align:center">图片</th>
+                                     <th class="col-sm-2">文字</th>
+                                      <th class="col-sm-2">音乐</th>
                                     <th class="col-sm-2">操作</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>1</td>
-                                    <td><a href="article.html">就如同外人看来钢铁大街</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
+                                      <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
+                                    <td>就如同外人看来钢铁大街</td>
+                                    <td style="text-align:center">就是爱你</td>
                                     <td>
+
                                         <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td><a href="article.html">过年回家的东西买家付电费</a></td>
+                                 <tr>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
+                                      <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
+                                    <td>就如同外人看来钢铁大街</td>
+                                    <td style="text-align:center">就是爱你</td>
                                     <td>
+
                                         <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td><a href="article.html">宣传部还没看型范冰冰的东方东方</a></td>
+                                 <tr>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center"><a href="tuixiang.html">爱你爱你</a></td>
+                                      <td style="text-align:center">
+                            <img alt="140x140" src="img/a9.jpg" class="img-circle img-xs" width="30%"/>
+                        </td>
+                                    <td>就如同外人看来钢铁大街</td>
+                                    <td style="text-align:center">就是爱你</td>
                                     <td>
+
                                         <a href="#" class="button text-navy"><i class="fa fa-level-up">置顶</i></a>
                                         <a href="#" class="button text-navy"><i class="fa fa-trash-o">删除</i></a>
                                     </td>
