--- a/front/community.html
+++ b/front/community.html
@@ -153,8 +153,15 @@
 							    </div>
 							  </div>
 							  <div class="card-footer">
-							    <a href="#" class="link">Like</a>
-							    <a href="#" class="link">Read more</a>
+							    <a href="#" class="link">
+				                    <i class="far fa-thumbs-up grayColor"></i>
+				                    <span class="grayColor">&nbsp;点赞</span>
+				                </a>
+				                <a href="#" class="link">
+				                    <i class="far fa-comment-alt grayColor"></i>
+				                    <span class="grayColor">&nbsp;评论</span>
+				                </a>
+							    <a href="#" class="link">更多 >></a>
 							  </div>
 							</div><!--1-->
 						</li>
@@ -168,8 +175,15 @@
 							    </div>
 							  </div>
 							  <div class="card-footer">
-							    <a href="#" class="link">Like</a>
-							    <a href="#" class="link">Read more</a>
+							    <a href="#" class="link">
+				                    <i class="far fa-thumbs-up grayColor"></i>
+				                    <span class="grayColor">&nbsp;点赞</span>
+				                </a>
+				                <a href="#" class="link">
+				                    <i class="far fa-comment-alt grayColor"></i>
+				                    <span class="grayColor">&nbsp;评论</span>
+				                </a>
+							    <a href="#" class="link">更多 >></a>
 							  </div>
 							</div><!--2-->
 						</li>
@@ -183,8 +197,15 @@
 							    </div>
 							  </div>
 							  <div class="card-footer">
-							    <a href="#" class="link">Like</a>
-							    <a href="#" class="link">Read more</a>
+							    <a href="#" class="link">
+				                    <i class="far fa-thumbs-up grayColor"></i>
+				                    <span class="grayColor">&nbsp;点赞</span>
+				                </a>
+				                <a href="#" class="link">
+				                    <i class="far fa-comment-alt grayColor"></i>
+				                    <span class="grayColor">&nbsp;评论</span>
+				                </a>
+							    <a href="#" class="link">更多 >></a>
 							  </div>
 							</div><!--2-->
 						</li>
@@ -202,9 +223,18 @@
 					  </div>
 					  <div class="card-content"><img src="img/2.jpg" width="100%"></div>
 					  <div class="card-footer no-border">
-					    <a href="#" class="link">Like</a>
-					    <a href="#" class="link">Comment</a>
-					    <a href="#" class="link">Share</a>
+					    <a href="#" class="link">
+		                   <i class="fas fa-share-square"></i>
+		                   <span>&nbsp;转发</span>
+		                </a>
+		                <a href="#" class="link">
+		                    <i class="far fa-comment-alt"></i>
+		                    <span>&nbsp;评论</span>
+		                </a>
+		                <a href="#" class="link">
+		                    <i class="far fa-thumbs-up"></i>
+		                    <span>&nbsp;点赞</span>
+		                </a>
 					  </div>
 					</div>
 					 
@@ -222,9 +252,18 @@
 					    </div>
 					  </div>
 					  <div class="card-footer">
-					    <a href="#" class="link">Like</a>
-					    <a href="#" class="link">Comment</a>
-					    <a href="#" class="link">Share</a>
+					    <a href="#" class="link">
+		                   <i class="fas fa-share-square"></i>
+		                   <span>&nbsp;转发</span>
+		                </a>
+		                 <a href="#" class="link">
+		                    <i class="far fa-comment-alt"></i>
+		                    <span>&nbsp;评论</span>
+		                </a>
+		                <a href="#" class="link">
+		                    <i class="far fa-thumbs-up"></i>
+		                    <span>&nbsp;点赞</span>
+		                </a>
 					  </div>
 					</div> <!--2-->  
 		          <!-- </div> -->
