--- a/front/index.html
+++ b/front/index.html
@@ -122,9 +122,18 @@
                   </div>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="link">Like</a>
-                  <a href="#" class="link">Comment</a>
-                  <a href="#" class="link">Share</a>
+                  <a href="#" class="link">
+                   <i class="fas fa-share-square"></i>
+                   <span>&nbsp;转发</span>
+                  </a>
+                  <a href="#" class="link">
+                    <i class="far fa-comment-alt"></i>
+                    <span>&nbsp;评论</span>
+                  </a>
+                  <a href="#" class="link">
+                    <i class="far fa-thumbs-up"></i>
+                    <span>&nbsp;点赞</span>
+                  </a>
                 </div>
               </div> 
               <!-- 卡片列表1 end -->
@@ -148,9 +157,18 @@
                   </div>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="link">Like</a>
-                  <a href="#" class="link">Comment</a>
-                  <a href="#" class="link">Share</a>
+                  <a href="#" class="link">
+                   <i class="fas fa-share-square"></i>
+                   <span>&nbsp;转发</span>
+                  </a>
+                  <a href="#" class="link">
+                    <i class="far fa-comment-alt"></i>
+                    <span>&nbsp;评论</span>
+                  </a>
+                  <a href="#" class="link">
+                    <i class="far fa-thumbs-up"></i>
+                    <span>&nbsp;点赞</span>
+                  </a>
                 </div>
               </div> 
               <!-- 卡片列表2 end -->
