--- a/front/community.html
+++ b/front/community.html
@@ -217,9 +217,12 @@
 		            <!-- ... 最新 content ... -->
 		            <div class="card facebook-card">
 					  <div class="card-header no-border">
-					    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
-					    <div class="facebook-name">John Doe</div>
-					    <div class="facebook-date">Monday at 3:47 PM</div>
+					  	<div class="fb">
+						    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+						    <div class="facebook-name">John Doe</div>
+						    <div class="facebook-date">Monday at 3:47 PM</div>
+					    </div>
+					    <a href="#" class="button followBtn" style="color:Tomato;border-color: #FF5722;">关注</a>
 					  </div>
 					  <div class="card-content"><img src="img/2.jpg" width="100%"></div>
 					  <div class="card-footer no-border">
@@ -240,9 +243,12 @@
 					 
 					<div class="card facebook-card">
 					  <div class="card-header">
-					    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
-					    <div class="facebook-name">John Doe</div>
-					    <div class="facebook-date">Monday at 2:15 PM</div>
+					    <div class="fb">
+						    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+						    <div class="facebook-name">John Doe</div>
+						    <div class="facebook-date">Monday at 3:47 PM</div>
+					    </div>
+					    <a href="#" class="button followBtn" style="color:Tomato;border-color: #FF5722;">关注</a>
 					  </div>
 					  <div class="card-content">
 					    <div class="card-content-inner">
