--- a/front/my.html
+++ b/front/my.html
@@ -170,7 +170,7 @@
                 <div class="list-block">
                   <ul>
                     <li>
-                      <a href="#" class="item-link item-content">
+                      <a href="myCollection.html" class="item-link item-content">
                         <!-- <div class="item-media"><i class="icon icon-f7"></i></div> -->
                         <div class="item-inner">
                           <div class="item-title">我的收藏</div>
