--- a/front/my.html
+++ b/front/my.html
@@ -132,7 +132,7 @@
                     </a>
                   </div>
                   <div class="col-33">
-                    <a href="#" class="blackColor">
+                    <a href="myfollow.html" class="external blackColor">
                       <h3 style="text-align:center;">
                         8
                       </h3>
@@ -142,7 +142,7 @@
                     </a>
                   </div>
                   <div class="col-33">
-                    <a href="#" class="blackColor">
+                    <a href="myfans.html" class="external blackColor">
                       <h3 style="text-align:center;">
                         8
                       </h3>
