WYW--页面联通+微调

--- a/front/musicPlay.html
+++ b/front/musicPlay.html
@@ -183,8 +183,8 @@
               </div>
             </div>
 		        <div class="row" style="padding-top:8%">
-		        	<audio id="audios1" src="music/Adele-Rolling In The Deep.mp3" loop="loop"></audio><br/> 
-              <audio id="audios" src="music/脸红的思春期-Some1.mp3" loop="loop"></audio><br/> 
+		        	<audio id="audios" src="music/Adele-Rolling In The Deep.mp3" loop="loop"></audio><br/> 
+              <audio id="audios1" src="music/脸红的思春期-Some1.mp3" loop="loop"></audio><br/> 
 		        </div>
             
 		        <!-- 播放控制区 End-->
