添加推荐列表页链接

--- a/front/find.html
+++ b/front/find.html
@@ -112,7 +112,7 @@
           <div class="list-block">
             <ul>
               <li>
-                <a href="#" class="external item-link item-content">
+                <a href="commendList.html" class="external item-link item-content">
                   <div class="item-media"><i class="icon fas fa-star fa-lg" style="color:Tomato"></i></div>
                   <div class="item-inner" style="height:50px;padding-left:1%;">
                     <div class="item-title font18">每日推荐</div>
