--- a/front/musicPublish.html
+++ b/front/musicPublish.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/llh.css">
     <script type="text/javascript" src="js/jquery.js"></script>
+    <style type="text/css">
+.toolbar-inner a{
+  width: 50%!important;
+}
+
+    </style>
 </head>
 <body>
 	<!-- Status bar overlay for fullscreen mode-->
@@ -55,14 +61,17 @@
 	    <!-- Bottom Toolbar-->
         <div class="toolbar tabbar tabbar-labels">
           <div class="toolbar-inner">
-              <a href="#" class="tab-link active" style="border-right:solid 1px #BDBDBD">
+                  <a href="javascript:;" class="tab-link active" style="border-right:solid 1px #BDBDBD">
                   <i class="icon fas fa-camera  fa-lg" style="color:Tomato"></i>
                   <span class="tabbar-label redColor">添加照片</span>
-              </a>
-              <a href="find.html" class="tab-link">
+                   <input type="file" id="img-file"  capture="camera" multiple accept="image/*" onchange="handleFiles(this)"/> 
+                 </a>
+                  <a href="javascript:;" class="tab-link">
                   <i class="icon fas fa-music fa-lg" style="color:Tomato"></i>
                   <span class="tabbar-label redColor">添加音乐</span>
-              </a>
+                   <input type="file" id="img-file"  capture="camera" multiple accept="image/*" onchange="handleFiles(this)" style="opactiy:0"/> 
+                  </a>
+            
           </div>
         </div><!-- toolbar end -->
        </div>
